completed getOrderReport and getProductReport in report controller
